syntax = "proto3";

package auth;

option go_package = "/auth";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
}

message ValidateRequest {
  string access_token = 1;
}

message ValidateResponse {
  bool valid = 1;
  uint32 user_id = 2;
}

message LoginRequest {
  uint32 tenant_id = 1;
  string email = 2;
  string password = 3;
}

message LoginResponse {
  string access_token = 1;
}

message RegisterRequest {
  uint32 tenant_id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string document = 5;
  string phone = 6;
  string date_of_birth = 7;
}

message RegisterResponse {
  uint32 user_id = 1;
}
